--- a/index.html
+++ b/index.html
@@ -5,18 +5,25 @@
     <title>Title</title>
 </head>
 <body>
-    <header class="content-header"></header>
-    <section>
-        <div class="col-1"></div>
-        <div class="col-2"></div>
-    </section>
-    <footer class="content-footer"></footer>
+    <div class="container">
+        <header></header>
+        <section>
+            <div class="col-1"></div>
+            <div class="col-2"></div>
+        </section>
+        <footer></footer>
+    </div>
     <style>
         * {
             box-sizing: border-box;
         }
+        .container {
+            max-width: 1000px;
+            margin: 0 auto;
+        }
         section {
             height: 300px;
+            margin-bottom: 50px;
         }
         .col-1 {
             background-color: red;
@@ -30,14 +37,15 @@
             height: 100%;
             float: right;
         }
-        .content-footer {
+        footer {
             background-color: yellow;
             height: 50px;
             width: 100%;
         }
-        .content-header {
+        header {
             background-color: aqua;
             height: 200px;
+            margin-bottom: 50px;
         }
     </style>
 </body>
